update DFT, Time Freq

--- a/book/fundamental/07_DFT.ipynb
+++ b/book/fundamental/07_DFT.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Discrete Fourier Transform (DFT)\n",
-    "With our newly discretized signals, we'll also have to obtain a discrete version of the Fourier transform as well. There are several concepts to be digested, so let's jump into it."
+    "## Frequency Analysis Fundamentals\n",
+    "\n",
+    "With our newly discretized signals, we'll also have to obtain a discrete version of the Fourier transform as well and that will be our departure point for doing fundamental frequency analysis in practice. We'll also discuss the concept of power spectral density (PSD) and demonstrate its usefulness with a few examples. There are several concepts to be digested, so let's jump into it!"
    ]
   },
   {
@@ -104,7 +105,7 @@
     "\n",
     "We have dropped the dependence on $\\Delta f$ on the left-hand-side as it is constant (similar to how we dropped $T_s$ for discrete-time signals). For each value of $k = 0, 1, 2, … N-1$ (for each corresponding frequency), we can interpret this equation as a sum of complex exponentials with normalized frequencies $(2 \\pi k)/N = (2 \\pi k \\Delta f)/f_s$, weighted by the values in $x[n]$ (amplitudes of the signal).  This results in a complex number for each frequency from which we can compute the magnitude and phase, and where the square of the magnitude tells use something about how much energy there is in the signal at that particular frequency. (I hope this is all starting to connect with everything we've done so far!).\n",
     "\n",
-    "And of course, we also have the **inverse DFT**, which for $n = 0, 1, 2, … N-1$, is given by (think about how this relates to the [Fourier series](https://randyaliased.github.io/acspjbook/main/fundamental/04_Fourier_Series.html))\n",
+    "And of course, we also have the **inverse DFT** (synthesis equation), which for $n = 0, 1, 2, … N-1$, is given by (think about how this relates to the [Fourier series](https://randyaliased.github.io/acspjbook/main/fundamental/04_Fourier_Series.html))\n",
     "\n",
     "$\\begin{align} \n",
     "\tx[n] &= \\frac{1}{N}\\sum\\limits_{k=0}^{N-1}X[k]e^{j \\frac{2 \\pi}{N} k  n} \\hspace{0.4 cm} \n",
@@ -305,11 +306,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The one-sided spectrum\n",
+    "### Periodicity and Symmetry\n",
     "\n",
-    "For this arbitrary signal, the magnitude spectrum is not particularly interesting, but it does demonstrate an important outcome from the DFT - there is some sort of repetition or **symmetry**. Recall that we've seen something similar in the Fourier transform, where the spectrum was symmetric around 0 Hz and we had positive and negative frequencies. This is the same thing we're seeing here, except the symmetry occurs around another value. \n",
+    "For this arbitrary signal, the magnitude spectrum is not particularly interesting, but it does illustrate that there is some sort of symmetry which is tied to an inherent periodicity within the DFT. This is due to the complex exponential in the DFT, $e^{\\pm j \\frac{2 \\pi}{N} k  n}$ which is periodic every N samples, such that \n",
     "\n",
-    "We can note some very specific characteristics of this symmetry (see the printed values in the previous code cell to verify):\n",
+    "$\\begin{equation}\n",
+    "x[n + N] = x [n];\\hspace{0.5cm} X[k+N] = X[k]\n",
+    "\\end{equation}$\n",
+    "\n",
+    "meaning that the time segment of $N$ samples and DFT coefficients, also of $N$ samples, are repeated from $-\\infty$ to $\\infty$ (a god exercise is to try and prove this with the DFT/inverse DFT formulas from above). This is why doing the DFT corresponds to doing a transform not only to a time segment of $N$ samples, but rather a repeated version of that time segment with period, $N$. This has important consequences when considering time windows (which we will briefly discuss in [time-frequency analysis](https://randyaliased.github.io/acspjbook/main/fundamental/08_Time_Freq_Analysis.html)).  \n",
+    "\n",
+    "The periodicity of $X[k]$ is something we already came across when we looked at the [spectrum of a sampled signal](https://randyaliased.github.io/acspjbook/main/fundamental/06_Sampling.html#but-why-did-aliasing-occur). Recall that when we sampled in the time-domain, this resulted in a repetition of the spectrum (frequency replicas) around integer multiples of $f_{s}$, accounting for its periodicity. What we're obeserving in the above plot in the section above $f_{s}/2$ is in fact the lower part of the first frequency replica, and hence why we see this symmetry. We can note some very specific characteristics of this symmetry (see the printed values in the previous code cell to verify):\n",
     "\n",
     "1. For signals with an even number of samples, the symmetry occurs around the value $k = N/2$ which corresponds to a frequency of $k \\Delta f = (N/2).(fs/N) = fs/2$, half of the sampling frequency, and what we referred to as the **Nyquist frequency**. \n",
     "\n",
