--- a/book/fundamental/08_Time_Freq_Analysis.ipynb
+++ b/book/fundamental/08_Time_Freq_Analysis.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Time Frequency Analysis"
+    "## Time Frequency Analysis\n",
+    "\n",
+    "Towards the end of the previous chapter, we saw that doing frequency analysis on short time frames or segments within a long audio recording can reveal how the signal strength in various frequency components can change over time. We'll formalize this concept a bit more and introduce the short-time Fourier transform (STFT) and the spectrogram."
    ]
   },
   {
@@ -49,9 +51,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Introduction\n",
+    "### Time-frequency representation\n",
     "\n",
-    "Time-frequency representations of signals allow us to quantify the nature of signals in terms of its spectral (frequency) variations over time. As illustrated in Fig. 1, time-frequency analysis involves the conversion of our signal in terms of time and amplitude to a \"grid-like\" representation where one axis represents time frames (some time segment of the signal) and the other frequency (frequency bins are simply the discrete indices corresponding to each of the frequencies). At each of these time-frequency points, we can define some quantity which tells us something about the strength of the signal at those times and frequencies, e.g., a power spectral density. \n",
+    "Time-frequency representations of signals allow us to quantify the nature of signals in terms of its spectral (frequency) variations over time. As illustrated in Fig. 1, time-frequency analysis involves the conversion of our signal in terms of time and amplitude to a \"grid-like\" representation where one axis represents time frames (some time segment of the signal) and the other frequency (recall that the frequency bins are simply the discrete indices corresponding to each of the frequencies, $k = 0, 1, 2, \\dots N-1$). At each of these time-frequency points, we can define some quantity which tells us something about the strength of the signal at those times and frequencies, e.g., a power spectral density. \n",
     "\n",
     "\n",
     "<br>\n",
@@ -66,29 +68,25 @@
     "<br>\n",
     "\n",
     "\n",
-    "In this notebook, the time-frequency domain that will be used is the short-time Fourier transform (STFT), where the frequency scale is linear, meaning that there is a constant difference between adjacent frequency bins (i.e. each of the grid points in Fig. 1 is uniformly spaced in frequency). Other time-frequency transforms may however use non-linear frequency scales such as the Mel scale or the equivalent rectangular bandwidth (ERB) scale. The \"best\" frequency scale used depends on the application at hand.  \n",
+    "In this chapter, the time-frequency domain that will be used is the short-time Fourier transform (STFT), where the frequency scale is linear, meaning that there is a constant difference between adjacent frequency bins (i.e. each of the grid points in Fig. 1 is uniformly spaced in frequency). Other time-frequency transforms may however use non-linear frequency scales such as the [Mel scale](https://en.wikipedia.org/wiki/Mel_scale) or the equivalent [rectangular bandwidth (ERB)](https://en.wikipedia.org/wiki/Equivalent_rectangular_bandwidth). \n",
     "\n",
     "### Short time Fourier Transform (STFT)\n",
     "\n",
-    "Fig. 2 depicts the processing steps to obtain the STFT representation from the discrete-time domain signal. The upper-most plot of Fig. 2 depicts the captured discrete-time domain signal. In the second step, this discrete-time domain signal is segmented into fixed-length overlapping frames each consisting of $N$ samples, which are then multiplied by an analysis window,  $w[n]$. Therefore, the $l^{th}$ time\n",
-    "frame depicted in the third sequence of Fig. 2 can be defined as:\n",
+    "Fig. 2 depicts the processing steps to obtain the STFT representation starting from the discrete-time domain signal, $x[n]$ in the upper-most plot. In the second step, $x[n]$ is segmented into fixed-length overlapping frames each consisting of $N$ samples. These time frames are then multiplied by another function, which we refer to as a **window** (specifically an analysis window since we are going from time to frequency, when going from frequency to time, we would distinguish this by the term synthesis window). The window, denoted as $w[n]$, is defined by some mathematical function for $n = 0, 1, 2, \\dots N-1$ and set to zero outside this domain. We have in fact been using windows since the previous chapter when extracting time frames from a longer singal. In that case, the window was simply $w[n] = 1$ (for $n = 0, 1, 2, \\dots N-1$), and is known as a rectangular window. However, there are [many different types of windows](https://en.wikipedia.org/wiki/Window_function) to choose from, each with its own set of tradeoffs, but this is not something I want to spend too much time on in this chapter (it perhaps deserves its own notebook for exploration in the future). Typically you will find that the [Hanning window](https://en.wikipedia.org/wiki/Hann_function) is preferred in many audio applications (also depicted in the 2nd row of Fig. 2 in red). This is because in comparison to a rectangular window, its edges smoothly taper off, and this results in desirable spectral properties. For a more comprehensive view on windows, [this is a great resource](https://ccrma.stanford.edu/~jos/sasp/Spectrum_Analysis_Windows.html).\n",
+    "\n",
+    "Moving to the third row of Fig. 2, the $l^{th}$ windowed time frame can be mathematically defined as\n",
     "\n",
     "\\begin{equation}\n",
-    "     \\bar{y} [n, l] = y[n + lR]  w[n]\n",
+    "     \\bar{x} [n, l] = x[n + lR]  w[n]\n",
     "\\end{equation}\n",
-    "for $n =  [0, 1, . . . , N − 1]$,  $l = [0, 1, . . . , L − 1]$, where L is the total number\n",
-    "of frames, and R is the hop-size in samples. R directly defines the amount of overlap, for instance, if R = 256 and P = 512, then the amount of overlap is defined as 50%.\n",
+    "for $n =  [0, 1, . . . , N − 1]$,  $l = [0, 1, . . . , L − 1]$, where L is the total number of time frames, and R is the hop-size in samples. R directly defines the amount of overlap between frames, so for instance, if R = 256 and P = 512, then the amount of overlap is defined as 50%.\n",
     "\n",
-    "The final step of then involves taking a discrete Fourier transform (DFT) on each of these windowed frames,  $\\bar{y} [n, l]$, which yields complex-valued STFT coefficients:\n",
+    "The final step of the STFT then involves taking a discrete Fourier transform (DFT) on each of these windowed time frames,  $\\bar{x} [n, l]$, which yields complex-valued STFT coefficients:\n",
     "\\begin{equation}\n",
-    "Y(k,l) = \\sum_{n=0}^{N-1} \\bar{y} [n, l] e^{-j 2\\pi \\frac{n k}{N}}\n",
+    "X(k,l) = \\sum_{n=0}^{N-1} \\bar{x} [n, l] e^{-j 2\\pi \\frac{n k}{N}}\n",
     "\\end{equation}\n",
     "\n",
-    "where N is the total number of frequency bins (i.e. the same as the number of samples within each frame), and $k =  [0, 1, . . . , N − 1]$ is a frequency bin corresponding to the specific frequency, f(Hz):\n",
-    "\\begin{equation}\n",
-    "f = \\frac{k f_s}{N}\n",
-    "\\end{equation}\n",
-    "where $f_s$ is the sampling frequency (Hz).\n",
+    "where $k =  [0, 1, . . . , N − 1]$ is the frequency bin corresponding to the specific frequency (Hz), $f = \\frac{k f_s}{N}$, where $f_s$ is the sampling frequency (Hz). With this, we now have the complex values $X(k,l)$ that can be assembled as per the matrix/tile type representation as shown on the right-hand-side illustration of Fig. 1.\n",
     "\n",
     "<br>\n",
     "<br>\n",
