--- a/book/fundamental/06_Sampling.ipynb
+++ b/book/fundamental/06_Sampling.ipynb
@@ -86,6 +86,7 @@
     "$\\begin{align}\n",
     "y(t) &\\rightarrow y[n.T_{s}] \\rightarrow y[n] \\hspace{0.3cm} \\text{for} \\hspace{0.1cm} n = 0, 1, 2, \\dots\n",
     "\\end{align}$\n",
+    "Note our use of square brackets for the discrete-time signals, a common way to distinguish continuous-time and discrete-time signals.\n",
     "\n",
     "Let's consider a simple sinusoid of 100 Hz as our continuous-time signal, and change $T_s$ to see the impact on what the discrete representation of the signal looks like. In the plot below the red signal represents the continuous-time signal and the blue dots represent the discrete-time version of the signal. "
    ]
