--- a/book/references.bib
+++ b/book/references.bib
@@ -1,3 +1,10 @@
+@misc{jason_moore,
+  title={Learn Multibody Dynamics, SymPy},
+  author={Moore, Jason},
+  howpublished={\url{https://moorepants.github.io/learn-multibody-dynamics/sympy.html}},
+  year={2023}
+}
+
 @book{bendat2011random,
   title={Random Data: Analysis and Measurement Procedures},
   author={Bendat, J.S. and Piersol, A.G.},
@@ -7,7 +14,7 @@
   publisher={Wiley}
 }
 
-@book{zolzer2011dafx,
+@misc{zolzer2011dafx,
   edition = {2nd},
   editor = {Z{\"o}lzer, U.},
   keywords = {DSP audio digital effects},
@@ -50,7 +57,7 @@ year = {1968},
 title = {Theoretical acoustics},
 language = {eng},
 address = {New York, USA},
-author = {Morse, Philip McCord and Ingard, K. Uno},
+author = {Morse, Philip McCord and Ingard, K. Uno}
 }
 
 @book{Oppenheim2009,
@@ -60,8 +67,7 @@ author = {Morse, Philip McCord and Ingard, K. Uno},
 	isbn = {0131988425},
 	publisher = {Prentice Hall Press},
 	address = {USA},
-	edition = {3rd},
-	abstract = {For senior/graduate-level courses in Discrete-Time Signal Processing. THE definitive, authoritative text on DSP -- ideal for those with an introductory-level knowledge of signals and systems. Written by prominent, DSP pioneers, it provides thorough treatment of the fundamental theorems and properties of discrete-time linear systems, filtering, sampling, and discrete-time Fourier Analysis. By focusing on the general and universal concepts in discrete-time signal processing, it remains vital and relevant to the new challenges arising in the field --without limiting itself to specific technologies with relatively short life spans.}
+	edition = {3rd}
 }
 
 @book{Vaseghi2008,
@@ -69,8 +75,5 @@ author = {Morse, Philip McCord and Ingard, K. Uno},
 	isbn = {9780470740156},
 	title = {Advanced Digital Signal Processing and Noise Reduction},
 	author ={Vaseghi, Saeed V. },
-	year = {2008},
-	keywords = {signal processing methods and applications, communication and signal processing system, signal processing methods - modelling, analysis, coding, synthesis, signal recognition, digital signal processing algorithms, bio-medical signal processing, two-microphone adaptive noise canceller configuration, speech and linear predictive model, Dolby noise reduction systems, offset-binary scalar quantisation},
-	abstract = {Summary This chapter contains sections titled: Signals, Noise and Information Signal Processing Methods Applications of Digital Signal Processing A Review of Sampling and Quantisation Summary Bibliography}
-}
+	year = {2008}}
 
