--- a/book/references.bib
+++ b/book/references.bib
@@ -1,9 +1,13 @@
-@misc{jason_moore,
-  title={Learn Multibody Dynamics, SymPy},
-  author={Moore, Jason},
-  howpublished={\url{https://moorepants.github.io/learn-multibody-dynamics/sympy.html}},
-  year={2023}
-}
+@ARTICLE{Harris1978,
+  author={Harris, F.J.},
+  journal={Proceedings of the IEEE}, 
+  title={On the use of windows for harmonic analysis with the discrete Fourier transform}, 
+  year={1978},
+  volume={66},
+  number={1},
+  pages={51-83},
+  keywords={Harmonic analysis;Discrete Fourier transforms;Signal processing;Signal resolution;Signal sampling;Oceans;Frequency;Smoothing methods;Fourier transforms;Parameter estimation},
+  doi={10.1109/PROC.1978.10837}}
 
 @book{bendat2011random,
   title={Random Data: Analysis and Measurement Procedures},
