--- a/book/dasp/02_Autocorrelation.ipynb
+++ b/book/dasp/02_Autocorrelation.ipynb
@@ -4,12 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Acoustic Signal Processing for Bioacoustics\n",
-    "### 02 - Autocorrelation\n",
+    "### Autocorrelation\n",
     "\n",
-    "In this notebook, we will investigate the autocorrelation function and how it can be useful for estimating times between similar acoustic events, e.g. a repeated bird call. \n",
-    "\n",
-    "Written by: Randall Ali (contact r.ali@surrey.ac.uk for questions/errors/suggestions!)\n"
+    "In this notebook, we will investigate the autocorrelation function and how it can be useful for estimating times between similar acoustic events, e.g. a repeated bird call. \n"
    ]
   },
   {
