--- a/book/fundamental/07_DFT.ipynb
+++ b/book/fundamental/07_DFT.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Frequency Analysis of Discrete-time Signals\n",
+    "## Frequency analysis of discrete-time signals\n",
     "\n",
     "With our newly discretized signals, we'll also have to obtain a discrete version of the Fourier transform as well and that will be our departure point for doing fundamental frequency analysis in practice. We'll also discuss the concept of power spectral density (PSD) and demonstrate its usefulness with a few examples. There are several concepts to be digested, so let's jump into it!"
    ]
