--- a/book/dasp/02_Autocorrelation.ipynb
+++ b/book/dasp/02_Autocorrelation.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "### Autocorrelation\n",
     "\n",
-    "In this notebook, we will investigate the autocorrelation function and how it can be useful for estimating times between similar acoustic events, e.g. a repeated bird call. \n"
+    "In this notebook, we will investigate the autocorrelation function and how it can be useful for estimating times between similar acoustic events, e.g. a repeated bird call. \n",
+    "\n"
    ]
   },
   {
