--- a/book/dasp/01_Impulse Response and Convolution.ipynb
+++ b/book/dasp/01_Impulse Response and Convolution.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -143,18 +143,12 @@
    ],
    "source": [
     "# Read in the speech signal\n",
-    "fs, speech = wavfile.read('../audio/F2.wav')\n",
-    "max_val = np.iinfo(speech.dtype).max\n",
-    "speech = speech.astype(np.float32) / max_val\n",
-    "#speech, fs = await read_wav_from_url(speech_sample) \n",
+    "speech, fs = await read_wav_from_url(speech_sample) \n",
     "print('The speech input signal, x[n]:')\n",
     "IPython.display.display(Audio(speech.T, rate=fs))\n",
     "\n",
     "# Read in the IR signal\n",
-    "fs, h = wavfile.read('../audio/IR1.wav')\n",
-    "max_val = np.iinfo(h.dtype).max\n",
-    "h = h.astype(np.float32) / max_val\n",
-    "#h, fs = await read_wav_from_url(impulse_resp)\n",
+    "h, fs = await read_wav_from_url(impulse_resp)\n",
     "print('The impulse response signal, h[n]:')\n",
     "IPython.display.display(Audio(h.T, rate=fs))\n",
     "\n",
@@ -366,7 +360,7 @@
     "\\begin{bmatrix} y[0] \\\\ y[1] \\\\ y[2] \\\\ y[3] \\\\ y[4] \\\\ y[5] \\end{bmatrix} = x[0] \\begin{bmatrix} h[0]  \\\\ h[1]  \\\\ h[2]  \\\\ 0  \\\\ 0 \\\\ 0  \\end{bmatrix}  + x[1] \\begin{bmatrix} 0 \\\\ h[0]  \\\\ h[1]  \\\\ h[2]  \\\\ 0  \\\\ 0  \\end{bmatrix} + \\dots + x[3] \\begin{bmatrix} 0\\\\ 0\\\\ 0\\\\ h[0]  \\\\ h[1]  \\\\ h[2]  \\end{bmatrix} \n",
     "\\end{equation}$\n",
     "\n",
-    "You can already see that this is pretty slow and inefficient as the matrix, $\\mathbf{H}$ can get very large, however it does give us some more insight into what we are doing when we perform a convolution. I will not attempt to do this here (it was too heavy for my machine), but if you are curious, you can use the [toeplitz](https://docs.scipy.org/doc/scipy-1.16.1/reference/generated/scipy.linalg.toeplitz.html) in Python. "
+    "You can already see that this is pretty slow and inefficient as the matrix, $\\mathbf{H}$ can get very large, however it does give us some more insight into what we are doing when we perform a convolution. I will not attempt to do this here (it was too heavy for my machine), but if you are curious, you can use the [toeplitz](https://docs.scipy.org/doc/scipy-1.16.1/reference/generated/scipy.linalg.toeplitz.html) function in Python. "
    ]
   },
   {
