--- a/book/references.bib
+++ b/book/references.bib
@@ -1,3 +1,14 @@
+@article{dietzen2023myriad,
+  title={MYRiAD: a multi-array room acoustic database},
+  author={Dietzen, Thomas and Ali, Randall and Taseska, Maja and van Waterschoot, Toon},
+  journal={EURASIP Journal on Audio, Speech, and Music Processing},
+  volume={2023},
+  number={1},
+  pages={17},
+  year={2023},
+  publisher={Springer}
+}
+
 @ARTICLE{Harris1978,
   author={Harris, F.J.},
   journal={Proceedings of the IEEE}, 
