--- a/book/dasp/01_IR_Conv.ipynb
+++ b/book/dasp/01_IR_Conv.ipynb
@@ -153,7 +153,7 @@
     "IPython.display.display(Audio(h.T, rate=fs))\n",
     "\n",
     "# Plot the signals\n",
-    "fig, axes = plt.subplots(2,1, figsize=(8, 4)) \n",
+    "fig, axes = plt.subplots(2,1, figsize=(6, 4)) \n",
     "axes[0].plot(speech)\n",
     "axes[0].set_title('Input speech signal')\n",
     "axes[0].set_xlabel('Number of Samples')\n",
@@ -163,6 +163,7 @@
     "axes[1].set_title('Impulse response')\n",
     "axes[1].set_xlabel('Number of Samples')\n",
     "axes[1].set_ylabel('Amplitude')\n",
+    "plt.show()\n",
     "plt.tight_layout()"
    ]
   },
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -317,7 +318,8 @@
     "    \n",
     "    line2.set_data(sample_idx[0:n+1], y[0:n+1])\n",
     "\n",
-    "print('Move the slider to see the convolution in action. The value n corresponds to the shift in the summation of the discrete-time convolution formula:')\n",
+    "print('Move the slider to see the convolution in action.')\n",
+    "print('The value n corresponds to the shift in the summation of the discrete-time convolution formula')\n",
     "interact(update, n = (0,L+M-1,1));\n",
     "\n",
     "\n",
@@ -369,11 +371,9 @@
    "source": [
     "### The impulse response and room acoustic modelling\n",
     "\n",
-    "<video width=\"720\" height=\"240\" controls>\n",
-    "  <source src=\"/anims/room_IR_model.mp4\" type=\"video/mp4\">\n",
-    "</video>\n",
-    "\n",
-    "![](/anims/room_IR_model.mp4.mov)\n"
+    "<video controls style=\"max-width:100%; height:auto;\">\n",
+    "  <source src=\"../animations/room_IR_model.mp4\" type=\"video/mp4\">\n",
+    "</video>\n"
    ]
   },
   {
