--- a/book/references.bib
+++ b/book/references.bib
@@ -1,3 +1,48 @@
+@article{valimaki2012fifty,
+  title={Fifty years of artificial reverberation},
+  author={Valimaki, Vesa and Parker, Julian D and Savioja, Lauri and Smith, Julius O and Abel, Jonathan S},
+  journal={IEEE Transactions on Audio, Speech, and Language Processing},
+  volume={20},
+  number={5},
+  pages={1421--1448},
+  year={2012},
+  publisher={IEEE}
+}
+
+@article{vorlander2013computer,
+  title={Computer simulations in room acoustics: Concepts and uncertainties},
+  author={Vorl{\"a}nder, Michael},
+  journal={The Journal of the Acoustical Society of America},
+  volume={133},
+  number={3},
+  pages={1203--1213},
+  year={2013},
+  publisher={AIP Publishing}
+}
+
+@article{savioja2015overview,
+  title={Overview of geometrical room acoustic modeling techniques},
+  author={Savioja, Lauri and Svensson, U Peter},
+  journal={The Journal of the Acoustical Society of America},
+  volume={138},
+  number={2},
+  pages={708--730},
+  year={2015},
+  publisher={AIP Publishing}
+}
+
+@article{allen1979image,
+  title={Image method for efficiently simulating small-room acoustics},
+  author={Allen, Jont B and Berkley, David A},
+  journal={The Journal of the Acoustical Society of America},
+  volume={65},
+  number={4},
+  pages={943--950},
+  year={1979},
+  publisher={Acoustical Society of America}
+}
+
+
 @article{dietzen2023myriad,
   title={MYRiAD: a multi-array room acoustic database},
   author={Dietzen, Thomas and Ali, Randall and Taseska, Maja and van Waterschoot, Toon},
