--- a/book/dasp/03_FilteringSignals.ipynb
+++ b/book/dasp/03_FilteringSignals.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "### Eigenfunctions of LTI systems.\n",
     "\n",
-    "Let's consider the LTI discrete-time system in Fig. 1 with impulse response, $h[n]$ and a discrete-time complex exponential input $x[n] = e^{j\\omega n T_{s}}, where $\\omega$ is the angular frequency (rad/s) and $T_{s}$ is the sampling period (seconds). \n",
+    "Let's consider the LTI discrete-time system in Fig. 1 with impulse response, $h[n]$ and a discrete-time complex exponential input $x[n] = e^{j\\omega n T_{s}}$, where $\\omega$ is the angular frequency (rad/s) and $T_{s}$ is the sampling period (seconds). \n",
     "<br>\n",
     "\n",
     "<div>\n",
